// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser fixture tests > should produce stable output for: basic dice with modifier 1`] = `
{
  "expressions": [
    {
      "diceGroups": [
        {
          "group": {
            "quantity": 2,
            "sides": 6,
          },
          "operator": "+",
        },
        {
          "group": {
            "quantity": 0,
            "sides": 3,
          },
          "operator": "+",
        },
      ],
    },
  ],
  "rawExpression": "2d6 + 3",
  "validationMessages": [],
}
`;

exports[`parser fixture tests > should produce stable output for: complex dice with all modifiers 1`] = `
{
  "expressions": [
    {
      "diceGroups": [
        {
          "group": {
            "exploding": true,
            "explodingNumber": 8,
            "infinite": false,
            "keepHighest": 3,
            "quantity": 4,
            "sides": 8,
          },
          "operator": "+",
        },
      ],
    },
  ],
  "globalModifier": 2,
  "rawExpression": "4d8! kh3 tn6 (+2)",
  "targetNumber": 6,
  "validationMessages": [],
}
`;

exports[`parser fixture tests > should produce stable output for: empty input 1`] = `
{
  "expressions": [
    {
      "diceGroups": [
        {
          "group": {
            "quantity": 1,
            "sides": 6,
          },
          "operator": "+",
        },
      ],
    },
  ],
  "rawExpression": "",
  "validationMessages": [],
}
`;

exports[`parser fixture tests > should produce stable output for: invalid input 1`] = `
{
  "expressions": [],
  "rawExpression": "invalid expression",
  "validationMessages": [
    "Failed to parse dice group: invalidepression",
  ],
}
`;

exports[`parser fixture tests > should produce stable output for: maximum dice quantity 1`] = `
{
  "expressions": [
    {
      "diceGroups": [
        {
          "group": {
            "quantity": 100,
            "sides": 6,
          },
          "operator": "+",
        },
      ],
    },
  ],
  "rawExpression": "100d6",
  "validationMessages": [],
}
`;

exports[`parser fixture tests > should produce stable output for: maximum dice sides 1`] = `
{
  "expressions": [
    {
      "diceGroups": [
        {
          "group": {
            "quantity": 1,
            "sides": 1000,
          },
          "operator": "+",
        },
      ],
    },
  ],
  "rawExpression": "1d1000",
  "validationMessages": [],
}
`;

exports[`parser fixture tests > should produce stable output for: multiple expressions with repetition 1`] = `
{
  "expressions": [
    {
      "diceGroups": [
        {
          "group": {
            "quantity": 1,
            "sides": 20,
          },
          "operator": "+",
        },
      ],
    },
    {
      "diceGroups": [
        {
          "group": {
            "quantity": 2,
            "sides": 6,
          },
          "operator": "+",
        },
      ],
    },
    {
      "diceGroups": [
        {
          "group": {
            "quantity": 3,
            "sides": 4,
          },
          "operator": "+",
        },
      ],
    },
    {
      "diceGroups": [
        {
          "group": {
            "quantity": 1,
            "sides": 20,
          },
          "operator": "+",
        },
      ],
    },
    {
      "diceGroups": [
        {
          "group": {
            "quantity": 2,
            "sides": 6,
          },
          "operator": "+",
        },
      ],
    },
    {
      "diceGroups": [
        {
          "group": {
            "quantity": 3,
            "sides": 4,
          },
          "operator": "+",
        },
      ],
    },
  ],
  "rawExpression": "1d20, 2d6, 3d4 x 2",
  "validationMessages": [],
}
`;

exports[`parser fixture tests > should produce stable output for: trait expression with modifiers 1`] = `
{
  "globalModifier": 2,
  "rawExpression": "d8+2 wd6 tn4",
  "targetHighest": 1,
  "targetNumber": 4,
  "traitDie": {
    "exploding": true,
    "explodingNumber": 8,
    "infinite": true,
    "quantity": 1,
    "sides": 8,
  },
  "validationMessages": [],
  "wildDie": {
    "exploding": true,
    "explodingNumber": 6,
    "infinite": true,
    "quantity": 1,
    "sides": 6,
  },
}
`;
